ブクマ機能途中

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,6 @@
 
 // blog
 @import '../css/blog.css';
+
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import "~@fortawesome/fontawesome-free/scss/solid";
